--- a/.gitconfig
+++ b/.gitconfig
@@ -6,8 +6,9 @@
 	editor = "code --wait"
 	autocrlf = input
 	safecrlf = true
+	quotePath = false
 
 [alias]
 	amend = commit --amend --no-verify
-  pusht = push --tags
-  pushd = push --delete
+	pusht = push --tags
+	pushd = push --delete
